branches/wip/Archive/e8838ef6e30633ab483d5c0f853a556c-50d9cfc8a1d350e7409e81e87c2653ba/output
main.cpp: In constructor 'X::X(int)':
main.cpp:37:7: error: class 'X' does not have any field named 'm_a5'
     , m_a5{1, 2}        // InitializerList_t(1, 2)                                             => each element is copy initialized:
       ^
